--- a/src/views/index.html
+++ b/src/views/index.html
@@ -117,8 +117,8 @@
     value: 208.28
   }
 ]
-  var socket = io('http://192.168.1.212:4000');
-  //var socket = io('localhost:4000');
+  //var socket = io('http://192.168.1.212:4000');
+  var socket = io('localhost:4000');
   socket.on('hello', function (data) {
     console.log(data);
 
@@ -438,8 +438,12 @@
       socket.emit('endgame', { my: 'data' });
     });
 
-    $( "#rotate" ).click(function() {
-      socket.emit('rotate', { my: 'data' });
+    $( "#dildon" ).click(function() {
+      socket.emit('dildon', { my: 'data' });
+    });
+
+    $( "#dildoff" ).click(function() {
+      socket.emit('dildoff', { my: 'data' });
     });
     $( "#reset" ).click(function() {
       console.log("reset");
@@ -468,6 +472,13 @@
   </button>
   <button id="endgame" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent endgame">
     ENDGAME
+  </button>
+  <hr>
+  <button id="dildon" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+    DILDON
+  </button>
+  <button id="dildoff" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+    DILDOFF
   </button>
   <hr>
   <p>Scenes</p>
