--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,24 +1,76 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.5">
   <title>Document</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <link rel="stylesheet" href="./mdl/material.min.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/dialog-polyfill.css">
+  <script src="./mdl/material.min.js"></script>
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
+
+    <script src="./js/jquery-3.2.1.min.js"></script>
+    <script src="./js/dialog-polyfill.js"></script>
 </head>
 <body>
   <script src="/socket.io/socket.io.js"></script>
 <script>
+
   var socket = io('http://localhost:4000');
   socket.on('hello', function (data) {
     console.log(data);
-    //socket.emit('my other event', { my: 'data' });
+
+  });
+  socket.on('errormessage', function (data) {
+      console.log(data["data"]);
+      var dialog = document.querySelector('dialog');
+      dialog.showModal();
+        $( "#errormessage" ).text(data["data"]);
+
+  });
+  socket.on('time', function (data) {
+      $( "#timer" ).text(data['time']);
   });
   $(document).ready(function() {
+
+    //reset everythingin load
+    $( "#timer" ).text(0);
+
+    $( "#player1button" ).click(function() {
+        console.log("doit)")
+        $.ajax({
+          url: '/config',
+          type: 'POST',
+          dataType : "json",
+          contentType: "application/json; charset=utf-8",
+          //data : JSON.stringify(data),
+          data: {}, // data as js object
+          success: function(result) {
+              console.log("ok " + result)
+              // Do something with the result
+          }
+        });
+    });
+
+    function showMessage(value){
+        $( "#player1" ).text(value);
+    }
+    var dialog = document.querySelector('dialog');
+
+    if (! dialog.showModal) {
+      dialogPolyfill.registerDialog(dialog);
+    }
+
+    dialog.querySelector('.close').addEventListener('click', function() {
+      dialog.close();
+    });
+
     $( "#reset" ).click(function() {
       console.log("reset");
+      $( "#timer" ).text(0);
       socket.emit('reset', { my: 'data' });
     });
     $( "#lobby" ).click(function() {
@@ -31,16 +83,88 @@
     });
   });
 </script>
-<!-- Accent-colored raised button with ripple -->
-<button id="reset" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-  RESET
-</button>
-<button id="lobby" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-  LOBBY
-</button>
-<button id="start" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-  VOID
-</button>
 
+<div class="mdl-grid">
+
+<div class="mdl-cell mdl-cell--3-col">
+<!-- Accent-colored raised button with ripple -->
+    <button id="reset" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent scenebutton">
+      RESET
+    </button>
+
+
+    <button id="lobby" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent scenebutton">
+      LOBBY
+    </button>
+
+    <button id="elevator" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent scenebutton">
+      ELEVATOR
+    </button>
+
+    <button id="start" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent scenebutton">
+      VOID
+    </button>
+    </div>
+<div class="mdl-cell mdl-cell--1-col timer" id="timer">
+
+</div>
+
+<dialog class="mdl-dialog">
+  <h4 class="mdl-dialog__title">Warning</h4>
+  <div class="mdl-dialog__content">
+    <span id="errormessage">
+      Warning Message
+    </span>
+  </div>
+  <div class="mdl-dialog__actions">
+    <button type="button" class="mdl-button close">OK</button>
+  </div>
+</dialog>
+
+</div>
+
+<!-- PLAYER -->
+<div class="mdl-grid player">
+  <div class="mdl-cell mdl-cell--1-col">
+    <b>Player 1</b>
+    <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-1">
+  <input type="checkbox" id="switch-1" class="mdl-switch__input" >
+  <span class="mdl-switch__label"></span>
+</label>
+  </div>
+  <div class="mdl-cell mdl-cell--2-col">
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+      <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="player1height">
+      <label class="mdl-textfield__label" for="sample4">Number...</label>
+    </div>
+</div>
+
+<div class="mdl-cell mdl-cell--2-col">
+<button id="player1button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+  SET PLAYER
+</button></div> </div>
+<!-- END PLAYER -->
+
+<!-- PLAYER -->
+<div class="mdl-grid player">
+  <div class="mdl-cell mdl-cell--1-col">
+    <b>Player 2</b>
+    <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-1">
+  <input type="checkbox" id="switch-1" class="mdl-switch__input" >
+  <span class="mdl-switch__label"></span>
+</label>
+  </div>
+  <div class="mdl-cell mdl-cell--2-col">
+    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+      <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="player2height">
+      <label class="mdl-textfield__label" for="sample4">Number...</label>
+    </div>
+</div>
+
+<div class="mdl-cell mdl-cell--2-col">
+<button id="player2button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+  SET PLAYER
+</button></div> </div>
+<!-- END PLAYER -->
 </body>
 </html>
