--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,7 +19,7 @@
   <script src="/socket.io/socket.io.js"></script>
 <script>
 
-  var socket = io('http://localhost:4000');
+  var socket = io('http://192.168.1.212:4000');
   socket.on('hello', function (data) {
     console.log(data);
 
