--- a/src/views/index.html
+++ b/src/views/index.html
@@ -117,8 +117,8 @@
     value: 208.28
   }
 ]
-//  var socket = io('http://192.168.1.212:4000');
-  var socket = io('localhost:4000');
+  var socket = io('http://192.168.1.212:4000');
+  //var socket = io('localhost:4000');
   socket.on('hello', function (data) {
     console.log(data);
 
