height number fix

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -200,7 +200,7 @@
         data: JSON.stringify(
           {
             "player" : 0,
-            "height" : height
+            "height" : parseFloat(height)
           }
         ), // data as js object
         success: function(result) {
@@ -218,7 +218,7 @@
         data: JSON.stringify(
           {
             "player" : 1,
-            "height" : height
+            "height" : parseFloat(height)
           }
         ), // data as js object
         success: function(result) {
@@ -236,7 +236,7 @@
         data: JSON.stringify(
           {
             "player" : 2,
-            "height" : height
+            "height" : parseFloat(height)
           }
         ), // data as js object
         success: function(result) {
@@ -254,7 +254,7 @@
         data: JSON.stringify(
           {
             "player" : 3,
-            "height" : height
+            "height" : parseFloat(height)
           }
         ), // data as js object
         success: function(result) {
@@ -272,7 +272,7 @@
         data: JSON.stringify(
           {
             "player" : 4,
-            "height" : height
+            "height" : parseFloat(height)
           }
         ), // data as js object
         success: function(result) {
